Fix from David fetter
git-svn-id: https://www.redhotpenguin.com/svn/vim@3 004e1b89-0910-0410-b4b7-856de0d1d3ce

--- a/vim_ide.pod
+++ b/vim_ide.pod
@@ -18,7 +18,7 @@ http://www.vim.org
 
 =item B<history>
 
-Vim is an improved version of the vi editor.  It's primary author is Bram
+Vim is an improved version of the vi editor.  Its primary author is Bram
 Moolenaar.
 
 =item B<scripts>
