Add reference to .vimrc.
git-svn-id: https://www.redhotpenguin.com/svn/vim@9 004e1b89-0910-0410-b4b7-856de0d1d3ce

--- a/vim_ide.pod
+++ b/vim_ide.pod
@@ -68,7 +68,7 @@ Lots of useful plugins which you can use to customize vim to your needs.
  file you can recover the content that you entered after the save.
 
  .vimrc - many examples on the web, we won't discuss this 
-	too deeply.
+ too deeply if at all.  See my .vimrc alongside this source file.
  
 =back
 
