Future section added.
git-svn-id: https://www.redhotpenguin.com/svn/vim@14 004e1b89-0910-0410-b4b7-856de0d1d3ce

--- a/vim_ide.pod
+++ b/vim_ide.pod
@@ -28,6 +28,12 @@ It's primary author is Bram Moolenaar, there are several contributing authors.
 
 :help credits - full authorship detail.
 
+=item B<future>
+
+Vim 7 is just around the corner.  See the development page for details.
+
+http://www.vim.org/develop.php
+
 =item B<scripts>
 
 http://www.vim.org/scripts/index.php
